--- a/view/frontend/web/css/source/module/_navbar.less
+++ b/view/frontend/web/css/source/module/_navbar.less
@@ -68,59 +68,93 @@
   @media screen and (max-width: (@screen__m - 1)) {
     padding-bottom: 72px;
     
-    .minicart-wrapper {
-      .mage-dropdown-dialog {
-        .block-minicart {
-          position: fixed;
-          top: 80vw;
-          left: 0;
-          box-shadow: 0 -5px 15px -6px rgba(0, 0, 0, 0.36);
-          &:after, 
-          &:before {
-            border: none;
+    .block-minicart {
+      &.stickyMinicart {
+        display: inline-block;
+        position: relative;
+        border: none;
+        width: 100%;
+        padding: 0;
+        right: 0;
+        box-shadow: none;
+        &:before,
+        &:after {
+          border-color: transparent;
+        }
+      }
+      .minicart-items-wrapper {
+        height: auto !important;
+        border-bottom: none;
+        .minicart-items {
+          position: relative;
+          overflow-x: hidden;
+          overflow-y: auto;
+          max-height: 60vh;
+          height: 45vh;
+          // chrome scroll fix
+          &::-webkit-scrollbar {
+              display: none;
+              width: 0 !important
           }
-          #minicart-content-wrapper {
-            .block-content {
-              overflow-x: hidden;
-              overflow-y: scroll;
-              height: 500px;
-            }
+          // firefox + edge scroll fix
+          -ms-overflow-style: none;
+          scrollbar-width: none;
+
+          .product-item {
+              &:last-child {
+                border-bottom: 1px solid @color-gray_light;
+              }
           }
         }
       }
+    }
 
-      #closeMiniCart {
-        position: absolute;
+    .stickyMinicart {
+      .stickySliderView {
+        border-top: 1px solid @color-gray_light;
         right: 0;
-        top: 2px;
-        background: transparent;
-        border: 0;
-        &:before {
-          -webkit-font-smoothing: antialiased;
-          -moz-osx-font-smoothing: grayscale;
-          font-size: 14px;
-          line-height: 14px;
-          color: @color-gray46;
-          content: '\e616';
-          font-family: 'luma-icons';
-          margin: 0;
-          vertical-align: top;
-          display: inline-block;
-          font-weight: normal;
-          overflow: hidden;
-          speak: none;
-          text-align: center;
-        }
-        @media (min-width: @screen__m) {
-          display: none;
-        }
-      }  
+        position: fixed;
+        overflow: hidden;
+        width: 90%;
+        bottom: 0;
+        background: @color-white;
+        z-index: 999;
+        padding: 20px;
+        box-shadow: 16px 10px 3px 10px @color-gray_light;
+      }
+    }
 
-      #btn-minicart-close {
+    #closeMiniCart {
+      position: absolute;
+      right: 0;
+      top: 2px;
+      background: transparent;
+      border: 0;
+      &:before {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        font-size: 14px;
+        line-height: 14px;
+        color: @color-gray46;
+        content: '\e616';
+        font-family: 'luma-icons';
+        margin: 0;
+        vertical-align: top;
+        display: inline-block;
+        font-weight: normal;
+        overflow: hidden;
+        speak: none;
+        text-align: center;
+      }
+      @media (min-width: @screen__m) {
         display: none;
       }
+    }  
 
+    #btn-minicart-close {
+      display: none;
     }
+
   }
 
   .minicart-wrapper {
@@ -130,5 +164,6 @@
   }
 
 }
+
 
 
