--- a/view/frontend/templates/cart/minicart.phtml
+++ b/view/frontend/templates/cart/minicart.phtml
@@ -8,69 +8,82 @@
 /** @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer */
 ?>
 
-<div data-block="minicart" class="minicart-wrapper" style="display: none">
-    <a class="action showcart" href="<?= $block->escapeUrl($block->getShoppingCartUrl()) ?>"
-       data-bind="scope: 'minicart_content'">
-        <span class="text"><?= $block->escapeHtml(__('My Cart')) ?></span>
-        <span class="counter qty empty"
-              data-bind="css: { empty: !!getCartParam('summary_count') == false && !isLoading() },
-               blockLoader: isLoading">
-            <span class="counter-number">
+    <div data-block="minicart" class="minicart-wrapper">
+        <a class="action showcart openMiniCartModal" href="<?= $block->escapeUrl($block->getShoppingCartUrl()) ?>"
+        data-bind="scope: 'minicart_content'">
+            <span class="text"><?= $block->escapeHtml(__('My Cart')) ?></span>
+            <span class="counter qty empty"
+                data-bind="css: { empty: !!getCartParam('summary_count') == false && !isLoading() },
+                blockLoader: isLoading">
+                <span class="counter-number">
+                    <!-- ko if: getCartParam('summary_count') -->
+                    <!-- ko text: getCartParam('summary_count').toLocaleString(window.LOCALE) --><!-- /ko -->
+                    <!-- /ko -->
+                </span>
+                <span class="counter-label">
                 <!-- ko if: getCartParam('summary_count') -->
-                <!-- ko text: getCartParam('summary_count').toLocaleString(window.LOCALE) --><!-- /ko -->
+                    <!-- ko text: getCartParam('summary_count').toLocaleString(window.LOCALE) --><!-- /ko -->
+                    <!-- ko i18n: 'items' --><!-- /ko -->
                 <!-- /ko -->
+                </span>
             </span>
-            <span class="counter-label">
-            <!-- ko if: getCartParam('summary_count') -->
-                <!-- ko text: getCartParam('summary_count').toLocaleString(window.LOCALE) --><!-- /ko -->
-                <!-- ko i18n: 'items' --><!-- /ko -->
-            <!-- /ko -->
-            </span>
-        </span>
-    </a>
+        </a>
 
-    <?php if ($block->getIsNeedToDisplaySideBar()):?>
-        <div class="block block-minicart"
-             data-role="dropdownDialog"
-             data-mage-init='{"dropdownDialog":{
-                "appendTo":"[data-block=minicart]",
-                "triggerTarget":".showcart",
-                "timeout": "2000",
-                "closeOnMouseLeave": true,
-                "closeOnEscape": true,
-                "triggerClass":"active",
-                "parentClass":"active",
-                "buttons":[]}}'>
-
-            <button id="closeMiniCart"></button>
-            <div id="minicart-content-wrapper" data-bind="scope: 'minicart_content'">
-                <!-- ko template: getTemplate() --><!-- /ko -->
+        <?php if ($block->getIsNeedToDisplaySideBar()):?>
+            <div data-bind="mageInit: {
+                'Magento_Ui/js/modal/modal':{
+                    'appendTo':'[data-block=minicart]',
+                    'type': 'slide',
+                    'trigger': '.openMiniCartModal',
+                    'responsive': true,
+                    'timeout': '2000',
+                    'closeOnMouseLeave': false,
+                    'closeOnEscape': true,
+                    'triggerClass':'active',
+                    'parentClass': 'active',
+                    'buttons':[]}}">
+                <div class="block block-minicart stickyMinicart">
+                    <!-- <button id="closeMiniCart"></button> -->
+                    <div id="minicart-content-wrapper" data-bind="scope: 'minicart_content'">
+                        <!-- ko template: getTemplate() --><!-- /ko -->
+                    </div>
+                </div>
+                
+                <?= $block->getChildHtml('minicart.addons') ?>
             </div>
-            <?= $block->getChildHtml('minicart.addons') ?>
-        </div>
-    <?php else: ?>
-        <?php $scriptString = <<<script
-            require(['jquery'], function ($) {
-                $('a.action.showcart').on('click', function() {
-                    $(document.body).trigger('processStart');
+        <?php else: ?>
+            <?php $scriptString = <<<script
+                require(['jquery'], function ($) {
+                    $('a.action.showcart').on('click', function() {
+                        $(document.body).trigger('processStart');
+                    });
                 });
-            });
-script;
-        ?>
-        <?= /* @noEscape */ $secureRenderer->renderTag('script', [], $scriptString, false); ?>
-    <?php endif ?>
-    <?= /* @noEscape */ $secureRenderer->renderTag('script', [], 'window.checkout = ' .
-     /* @noEscape */ $block->getSerializedConfig(), false); ?>
-    <script type="text/x-magento-init">
-    {
-        "[data-block='minicart']": {
-            "Magento_Ui/js/core/app": <?= /* @noEscape */ $block->getJsLayout() ?>
-        },
-        "*": {
-            "Magento_Ui/js/block-loader": "<?= $block->escapeJs(
-                $block->escapeUrl($block->getViewFileUrl('images/loader-1.gif'))
-            ) ?>"
+    script;
+            ?>
+            <?= /* @noEscape */ $secureRenderer->renderTag('script', [], $scriptString, false); ?>
+        <?php endif ?>
+        <?= /* @noEscape */ $secureRenderer->renderTag('script', [], 'window.checkout = ' .
+        /* @noEscape */ $block->getSerializedConfig(), false); ?>
+        <script type="text/x-magento-init">
+        {
+            "[data-block='minicart']": {
+                "Magento_Ui/js/core/app": <?= /* @noEscape */ $block->getJsLayout() ?>
+            },
+            "*": {
+                "Magento_Ui/js/block-loader": "<?= $block->escapeJs(
+                    $block->escapeUrl($block->getViewFileUrl('images/loader-1.gif'))
+                ) ?>"
+            }
         }
-    }
-    </script>
-</div>
+        </script>
+
+        <script type="text/javascript">
+            require([
+                'jquery'
+            ], function  ($) {
+                $('.openMiniCartModal').click(function (event) {
+                    event.preventDefault()
+                })
+            })
+            </script>
+    </div>
