--- a/view/frontend/templates/cart/minicart.phtml
+++ b/view/frontend/templates/cart/minicart.phtml
@@ -8,9 +8,32 @@
 /** @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer */
 ?>
 
+<?php $isStickyTabEnabled = $block->isStickyTabEnabled() ?>
+
+<?php if($isStickyTabEnabled): ?>
     <div data-block="minicart" class="minicart-wrapper">
+        <a class="action showcart openDefaultMiniCart" href="<?= $block->escapeUrl($block->getShoppingCartUrl()) ?>"
+            data-bind="scope: 'minicart_content'" style="display: none">
+            <span class="text"><?= $block->escapeHtml(__('My Cart')) ?></span>
+            <span class="counter qty empty"
+                data-bind="css: { empty: !!getCartParam('summary_count') == false && !isLoading() },
+                blockLoader: isLoading">
+                <span class="counter-number">
+                    <!-- ko if: getCartParam('summary_count') -->
+                    <!-- ko text: getCartParam('summary_count').toLocaleString(window.LOCALE) --><!-- /ko -->
+                    <!-- /ko -->
+                </span>
+                <span class="counter-label">
+                <!-- ko if: getCartParam('summary_count') -->
+                    <!-- ko text: getCartParam('summary_count').toLocaleString(window.LOCALE) --><!-- /ko -->
+                    <!-- ko i18n: 'items' --><!-- /ko -->
+                <!-- /ko -->
+                </span>
+            </span>
+        </a>
+
         <a class="action showcart openMiniCartModal" href="<?= $block->escapeUrl($block->getShoppingCartUrl()) ?>"
-        data-bind="scope: 'minicart_content'">
+            data-bind="scope: 'minicart_content'" style="display: none">
             <span class="text"><?= $block->escapeHtml(__('My Cart')) ?></span>
             <span class="counter qty empty"
                 data-bind="css: { empty: !!getCartParam('summary_count') == false && !isLoading() },
@@ -30,7 +53,25 @@
         </a>
 
         <?php if ($block->getIsNeedToDisplaySideBar()):?>
-            <div data-bind="mageInit: {
+            <div class="block block-minicart render-desktop"
+                data-role="dropdownDialog"
+                data-mage-init='{"dropdownDialog":{
+                    "appendTo":"[data-block=minicart]",
+                    "triggerTarget":".openDefaultMiniCart",
+                    "timeout": "2000",
+                    "closeOnMouseLeave": false,
+                    "closeOnEscape": true,
+                    "triggerClass":"active",
+                    "parentClass":"active",
+                    "buttons":[]}}'>
+                <div id="minicart-content-wrapper" data-bind="scope: 'minicart_content'">
+                    <!-- ko template: getTemplate() --><!-- /ko -->
+                </div>
+                <?= $block->getChildHtml('minicart.addons') ?>
+            </div>
+
+            <div class="block block-minicart stickyMinicart render-mobile"
+                data-bind="mageInit: {
                 'Magento_Ui/js/modal/modal':{
                     'appendTo':'[data-block=minicart]',
                     'type': 'slide',
@@ -42,15 +83,12 @@
                     'triggerClass':'active',
                     'parentClass': 'active',
                     'buttons':[]}}">
-                <div class="block block-minicart stickyMinicart">
-                    <!-- <button id="closeMiniCart"></button> -->
-                    <div id="minicart-content-wrapper" data-bind="scope: 'minicart_content'">
-                        <!-- ko template: getTemplate() --><!-- /ko -->
-                    </div>
+                <div id="minicart-content-wrapper" data-bind="scope: 'minicart_content'">
+                    <!-- ko template: getTemplate() --><!-- /ko -->
                 </div>
-                
                 <?= $block->getChildHtml('minicart.addons') ?>
             </div>
+
         <?php else: ?>
             <?php $scriptString = <<<script
                 require(['jquery'], function ($) {
@@ -76,14 +114,21 @@
             }
         }
         </script>
-
-        <script type="text/javascript">
-            require([
-                'jquery'
-            ], function  ($) {
-                $('.openMiniCartModal').click(function (event) {
-                    event.preventDefault()
-                })
-            })
-            </script>
     </div>
+
+    <script type="text/javascript">
+        require([
+            'jquery'
+        ], function ($) {
+            $(document).ready (function () {
+                if ($(window).innerWidth() < 767) {
+                    $('.openMiniCartModal').click(function (event) {
+                        event.preventDefault()
+                    })
+                } else {
+                    $('.action.showcart').show()
+                }
+            })
+        })
+    </script>
+<?php endif ?>
