--- a/view/frontend/web/css/source/module/_navbar.less
+++ b/view/frontend/web/css/source/module/_navbar.less
@@ -62,7 +62,23 @@
         right: 11px;
         line-height: 20px;
       }
-
+      &.tabMiniCart {
+        &.slider-open {
+          .nav-icon { width: 0; }
+          a {
+            &:before {
+              content: '';
+              background: url(../images/cart_active.png) no-repeat center center;
+              width: 20px;
+              height: 20px;
+              display: block;
+              background-size: 22px;
+              left: 2px;
+              position: relative;
+            }
+          }
+        }
+      }
     }
   }
   
@@ -180,26 +196,6 @@
   @media screen and (max-width: @screen__xxs) {
     #top-cart-btn-checkout {
       font-size: 16px;
-    }
-  }
-
-  &._has-modal {
-    .tabMiniCart {
-      // &.active {
-        .nav-icon { width: 0;}
-        a {
-          &:before {
-            content: '';
-            background: url(../images/cart_active.png) no-repeat center center;
-            width: 22px;
-            height: 22px;
-            display: block;
-            background-size: 22px;
-            left: 0px;
-            position: relative;
-          }
-        }
-      // }
     }
   }
 
