--- a/view/frontend/web/css/source/module/_stickyTabBar.less
+++ b/view/frontend/web/css/source/module/_stickyTabBar.less
@@ -93,7 +93,7 @@
           transition: all 0.25s ease;
           position: fixed;
           width: 90%;                    
-          top: 80%;
+          top: 0;
           margin-top: 0;
           right: 0;
           height: 100%;
@@ -120,7 +120,7 @@
             overflow: hidden;
             position: fixed;
             width: 90%;
-            top: 90%;
+            top: 80%;
             background: @color-white;
             z-index: 999;
             right: 0;
