Stickt Tab bar module files commit

--- a/view/frontend/templates/stickyTabBar.phtml
+++ b/view/frontend/templates/stickyTabBar.phtml
@@ -1,10 +1,10 @@
 <?php
 /**
- * @author Vectra Team
- * @copyright Copyright © Vectra Business Technologies
- * @package Vectra_StickyTabBar
+ * @author Karen Rumbie Creatives
+ * @copyright Copyright © Karen Rumbie Creatives
+ * @package KarenRumbie_StickyTabBar
  *
- * @var $block \Vectra\StickyTabBar\Block\StickyTabBar
+ * @var $block \KarenRumbie\StickyTabBar\Block\StickyTabBar
  */
 ?>
 
@@ -64,7 +64,7 @@
 
         <?php if($NavFive['enabled']): ?>
             <div class="nav-item tabMiniCart">
-                <a href="/checkout/cart/" id="vectraMiniCart">
+                <a href="/checkout/cart/" id="karenrumbieMiniCart">
                     <img class="nav-icon" src="<?= $NavFive['icon']; ?>" />
                     <span class="title"><?= $NavFive['title']; ?></span>
                     <div class="navbarQty initialQty" style="display: none;">0</div>
