--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="before.body.end">
-            <block class="Vectra\StickyTabBar\Block\StickyTabBar" name="stickytabbar" template="Vectra_StickyTabBar::stickyTabBar.phtml"></block>
+            <block class="KarenRumbie\StickyTabBar\Block\StickyTabBar" name="stickytabbar" template="KarenRumbie_StickyTabBar::stickyTabBar.phtml"></block>
         </referenceContainer>
     </body>
 </page>
