--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -1,7 +1,7 @@
 /**
-* @author Vectra Team
-* @copyright Copyright © Vectra Business Technologies
-* @package Vectra_StickyTabBar
+* @author Karen Rumbie Creatives
+* @copyright Copyright © Karen Rumbie Creatives
+* @package KarenRumbie_StickyTabBar
 */
 
 @import "module/_stickyTabBar.less";
